starspan ChangeLog
$Id$
                                    

2005-06-18 (0.995)
	STARSPAN_VERSION only needs to be defined in one place: configure.in

2005-06-18 (0.9941 - interim)
	- CVS: removed generated files; new reconf script;
	  mksrcdist.sh.in updated to create public distribution.
	  
	- some refactoring

2005-06-06 (0.994)
	- Added option --show-fields
	- Elapsed time reported only if --verbose is given
	
2005-06-05 (0.994)
	starspan.in: Fixed calls using the list of passed arguments; now
	"$@" is used instead $*, which was wrong particularly to deal
	with arguments containing spaces. Note also that just $@ 
	(without the double quotes) won't work either.
	
2005-05-26 (0.994)
	Version set to 0.994
	Some minor documentation updates.
	
	Removed: --RID_as_given
	Added: --RID {file | path | none}
		Style for RID values in output.
			file : the simple filename without path 
			path : exactly as obtained from command line or field in vector 
			none : no RID is included in output
			
	Updated: --csv now processing --RID
	
	Check --raster_directory is only given with --raster @field scheme.
	
2005-05-21 (0.994)
	PATH in starspan{.in} was not set to include GDAL and GEOS's bin/
	directories. Fixed.
	
	todo: check proper environment to run tests 
	
2005-04-28 (0.993)
	Hack in starspan_myErrorHandler (starspan_util.cc) as a workaround
	in current GDAL code which doesn't implement SetScale/SetOffset 
	methods for some raster band types.  
	
	Traverser code cleanup (traverser.h, traverser.cc):
	Removed old methods for rasterization of polygons:
		processValidPolygon_FF(geos_poly)
		processValidPolygon_BB(geos_poly)
	Versions containing those methods are:
	    traverser.h,v 1.9
		traverser.cc,v 1.10
		
	starspan_countbyclass.cc: verbose messages and flush for each
	finished feature.
	
	Note: configure doesn't set execution permission to script 
	starspan. This flag is set by `make install' on destination.